--- a/package.json
+++ b/package.json
@@ -9,11 +9,16 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "apollo-server-express": "^3.13.0",
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
+    "express-graphql": "^0.12.0",
     "express-validator": "^7.2.1",
     "mongoose": "^8.9.2",
-    "nodemon": "^3.1.9"
+    "graphql": "^16.10.0",
+    "graphql-subscriptions": "^3.0.0",
+    "nodemon": "^3.1.9",
+    "socket.io": "^4.8.1"
   }
 }
