--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "@graphql-yoga/subscription": "^5.0.3",
     "apollo-server-express": "^3.13.0",
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
@@ -18,6 +19,8 @@
     "mongoose": "^8.9.2",
     "graphql": "^16.10.0",
     "graphql-subscriptions": "^3.0.0",
+    "graphql-ws": "^6.0.3",
+    "ws": "^8.18.0",
     "nodemon": "^3.1.9",
     "socket.io": "^4.8.1"
   }
