--- a/package.json
+++ b/package.json
@@ -11,17 +11,18 @@
   "dependencies": {
     "@graphql-yoga/subscription": "^5.0.3",
     "apollo-server-express": "^3.13.0",
+    "axios": "^1.7.9",
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
     "express-graphql": "^0.12.0",
     "express-validator": "^7.2.1",
-    "mongoose": "^8.9.2",
     "graphql": "^16.10.0",
     "graphql-subscriptions": "^3.0.0",
     "graphql-ws": "^6.0.3",
-    "ws": "^8.18.0",
+    "mongoose": "^8.9.2",
     "nodemon": "^3.1.9",
-    "socket.io": "^4.8.1"
+    "socket.io": "^4.8.1",
+    "ws": "^8.18.0"
   }
 }
