--- a/package.json
+++ b/package.json
@@ -3,12 +3,14 @@
   "version": "1.0.0",
   "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "nodemon server.js"
   },
   "author": "",
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "@apollo/server": "^4.11.3",
     "@graphql-yoga/subscription": "^5.0.3",
     "apollo-server-express": "^3.13.0",
     "axios": "^1.7.9",
@@ -18,10 +20,11 @@
     "express-graphql": "^0.12.0",
     "express-validator": "^7.2.1",
     "graphql": "^16.10.0",
-    "graphql-subscriptions": "^3.0.0",
+    "graphql-subscriptions": "^2.0.0",
     "graphql-ws": "^6.0.3",
     "mongoose": "^8.9.2",
     "nodemon": "^3.1.9",
+    "subscriptions-transport-ws": "^0.11.0",
     "ws": "^8.18.0"
   }
 }
